--- a/EsSplit/templates/SignUp.html
+++ b/EsSplit/templates/SignUp.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="theme-color" content="#465BC7">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Rejestracja</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/test.css' %}">
@@ -11,7 +15,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-p7QstapH7YLAqVzR+C7kWgjHHwKVw3+wBzlnvjWorldIJYRtUknUIP0EjAnvCbxaayQvMsZ0MY3BWfBmuscZLSw=="
         crossorigin="anonymous">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
