--- a/EsSplit/templates/login.html
+++ b/EsSplit/templates/login.html
@@ -69,13 +69,13 @@
 
 
             <div class="txt_field">
+                <input type="text" name="email" required placeholder=" ">
                 <label>Adres email</label>
-                <input type="text" name="email" required placeholder="jan.kowalski@email.pl">
                 <span></span>
             </div>
             <div class="txt_field">
+                <input type="password" name="password" required placeholder=" ">
                 <label>Hasło</label>
-                <input type="password" name="password" required placeholder="••••••••">
                 <span></span>
             </div>
 
